crates/core/tests/snapshots/container_schema_test__schema_type__unnamed_struct__supports_empty.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema.tuple(TupleType::new([]))
}
