crates/core/tests/snapshots/container_schema_test__schema_type__unnamed_struct__supports_many_values.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .tuple(
            TupleType::new([
                schema.infer::<String>(),
                {
                    let mut schema = schema.infer::<usize>();
                    schema.set_description("Item docs.");
                    schema
                },
                schema.infer_as_nested::<NestedConfig>(),
            ]),
        )
}
